# nexscope

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  run_nexscope.py
nexscope/: __init__.py  app.py
nexscope/core/: __init__.py  model.py  reader.py  recorder.py  session.py  settings.py
nexscope/resources/: sdo_presets.json
nexscope/ui/: __init__.py  analyzer.py  header.py  liveplot.py  mainwindow.py  picker.py  plotbase.py  resources.py  theme.py
tests/: test_nexscope.py
